--- a/BoatClubWebsite/Pages/Member/GetAllMembers.cshtml
+++ b/BoatClubWebsite/Pages/Member/GetAllMembers.cshtml
@@ -32,9 +32,9 @@
           </tr>       
         </thread>
         <tbody>
-            @if (Model.Members != null)
+            @if (Model. != null)
             {
-                foreach (var member in Model.Members)
+                foreach (var member in Model.)
                 {
                     <tr>
                         <td>
