--- a/BoatClubWebsite1/Pages/Boat/GetAllBoats.cshtml
+++ b/BoatClubWebsite1/Pages/Boat/GetAllBoats.cshtml
@@ -102,10 +102,10 @@
 
 
 
-                    @* <td>
-                        <a title="Eidt" class="btn btn-primary btn-sm" type="button" asp-page="EditItem" asp-route-id="@item.Id">Edit</a>
-                        <a class="btn btn-danger btn-sm" type="button" title="Delete" asp-page="DeleteItem" asp-route-id="@item.Id">Delete</a>
-                    </td> *@
+                     <td>
+                        @* <a title="Eidt" class="btn btn-primary btn-sm" type="button" asp-page="EditItem" asp-route-id="@boat.Id">Edit</a> *@
+                        <a class="btn btn-danger btn-sm" type="button" title="Delete" asp-page="DeleteBoat" asp-route-id="@boat.Id">Delete</a>
+                    </td> 
                 </tr>
             }
         }
